# RSSI-measurement-device

./: README.md  devtest12  devtest13  medidas  pyproject.toml
Interface/: Interfaz2.py
Medidas/10a_prueba/: medidas.txt  procesado.kml  procesado.txt
Medidas/11a_prueba/: medidas.txt  procesado.kml  procesado.txt
Medidas/12a_prueba/: medidas.txt  procesado.kml  procesado.txt
Medidas/13a_prueba/: medidas.txt  procesado.kml  procesado.txt
Medidas/14a_prueba/: medidas.txt  procesado.kml  procesado.txt
Medidas/15a_prueba/: medidas.txt  procesado.txt
Medidas/16a_prueba/: procesado.txt
Medidas/17a_prueba/: medidas.txt  procesado.kml  procesado.txt
Medidas/1a_prueba/: medidas.txt
Medidas/2a_prueba/: medidas.txt  t1.txt
Medidas/3a_prueba/: medidas.txt
Medidas/4a_prueba/: medidas.txt
Medidas/5a_prueba/: t1  t1.txt
Medidas/6a_prueba/: t1  t1.txt
Medidas/7a_prueba/: medidas.txt  medidas2.txt  medidas3.txt
Medidas/8a_prueba/: medidas.txt  procesado.kml  procesado.txt  procesado2.txt
Medidas/9a_prueba/: medidas.txt  procesado.kml  procesado.txt
Medidas/Explanada/: config.txt  datos_medida.txt  medidas.txt  procesado.kml  procesado.txt
Medidas/Marina/: config.txt  procesado.kml  procesado.txt
Medidas/Parking/: config.txt  datos_medida.txt  medidas.txt  procesado.kml  procesado.txt
Medidas/Rampa/: config.txt  medidas.txt  procesado.kml
Medidas/calle24/: config.txt  medidas.txt  procesado.kml  procesado.txt
Medidas/calle24_2/: calle24_2.txt  config.txt  procesado.kml  procesado.txt
Medidas/calle5_1/: config.txt  (+3 more)
Programa/: GPS.py  Main.py  Pantalla.py  Utilidades.py
Programa_V1/: Barometro.py  GNU_Radio.py  Heatmap.py
Programa_V2/: Main_no_interface.py  pyproject.toml
Programa_V2/src/RSSI_measurement_device.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
Programa_V2/src/rssidev_cli/: GPS.py  Heatmap.py  Main.py  Pantalla.py  Representacion.py  Utilidades.py
Programa_V2_gui/: Interfaz.py  RTK.py  pyproject.toml
(+73 files in other folders)
